<resources>
    <string name="app_name">DesinsegApp</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="cedula">Identificacion</string>
    <string name="correo">Correo</string>
    <string name="guardar">Guardar</string>
    <string name="ingresar">Ingresar</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="ciudad">Ciudad</string>
    <string name="empresa">Empresa</string>
    <string name="producto">Producto</string>
    <string name="valor">Valor</string>
    <string name="descripcion">Descripcion</string>
    <string name="ruta">Ruta</string>
    <string name="ver">Ver</string>
    <string name="estado">Estado</string>
    <string name="desCorta">Descripcion Corta</string>
    <string name="bodega">Bodega</string>
    <string name="cantidad">Cantidad</string>
    <string name="proveedor">Proveedor</string>
</resources>